--- a/force-app/main/default/classes/rv_sht_CreateControllerLWC.cls
+++ b/force-app/main/default/classes/rv_sht_CreateControllerLWC.cls
@@ -474,7 +474,7 @@ public class rv_sht_CreateControllerLWC {
                 grade = mrcObj.Material_Description__c;
             }
             wrapObj.grade = grade;
-            if(grade == 'ULG95 E5' || grade == 'ULG98' || grade == 'GTL B0' || grade=='GTL B7'){
+            if(grade == 'ULG95 E5' || grade == 'ULG98') { // || grade == 'GTL B0' || grade=='GTL B7'){ commented for PBI 1843678
                 wrapObj.showFinalOTM = false;
 
             } else {
